[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers", "macros"]}
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
